tests/build/fail/widget_new/no_default_when_assigned.stderr
error: property `margin` is not assigned and has no default value
 --> $DIR/no_default_when_assigned.rs:7:13
  |
7 |             margin = 20
  |             ^^^^^^
